cv/cv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv
  labels:
    app: cv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv
  template:
    metadata:
      labels:
        app: cv
    spec:
      containers:
        - name: cv
          image: jleobernard/cv:1.0.0
#          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: cv
spec:
  selector:
    app: cv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
