cv/cv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - cv.jleo.tech
    secretName: ssl-cert-cv
  rules:
  - host: cv.jleo.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cv
            port:
              number: 80
